Fix/frontpage banner alignment (#183)
* Set banner-container width to 600px not banner-wrapper

* Center frontpage banner wrapper

--- a/scss/post.scss
+++ b/scss/post.scss
@@ -234,6 +234,9 @@
 
 #banner-wrapper {
 	margin-bottom: 0;
+}
+
+#banner-container {
 	max-width: 600px;
 }
 
